[package]
name = "namtem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
directories = "4.0.1"
number_range = "0.2.0"
savefile-derive = "0.12.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
term_grid = "0.2.0"
terminal_size = "0.2.5"
